Webdev links fixed

--- a/webdev.html
+++ b/webdev.html
@@ -45,7 +45,7 @@
                     <h2>Juventus Shop</h2>
                     <p>Reinventing the Juventes Official Shop landing page, Match Kits and developing new shop page options.</p>
                     <p class="bold">Skills: Front-end development, UX/UI design, Accessibility, Web-animation </p>
-                    <a target="_blank" href="https://juventus.maxambrogio.me/" class="visit button">Visit Site</a>
+                    <a target="_blank" href="" class="visit button">Visit Site</a>
                 </div>
                 <div class="img juve-one"></div>
                 <div class="img juve-two"></div>
@@ -56,7 +56,7 @@
                     <h2>React Trivia Game</h2>
                     <p>Tapping into the open trivia database, React.js was used to create a multi-functional, 10 question quiz. This interactive quiz invited users to input their answers, which later calculated their answers and presented their total score.</p>
                     <p class="bold">Skills: Front-end development, React.js</p>
-                    <a target="_blank" href="https://juventus.maxambrogio.me/" class="visit button">Visit Site</a>
+                    <a target="_blank" href="" class="visit button">Visit Site</a>
                 </div>
                 <div class="img trivia-one"></div>
                 <div class="img trivia-two"></div>
@@ -68,7 +68,7 @@
                     <p>Developing a new landing page that makes lifestyle and beverage brand, Truly, stand out in the hard seltzer market.
                     </p>
                     <p class="bold">Skills:  Front End Development, UX/UI Design, Accessibility, Web Animation</p>
-                    <a target="_blank" href="https://truly.maxambrogio.me" class="visit button">Visit Site</a>
+                    <a target="_blank" href="" class="visit button">Visit Site</a>
                 </div>
                 <div class="img truly-one"></div>
                 <div class="img truly-two"></div>
@@ -80,7 +80,7 @@
                 <p>Created a landing page for an imaginary pokebowl resturant</p>
                 <p class="bold">Skills:  Front End Development, UX/UI Design, Accessibility, Web Animation
                 </p>
-                <a target="_blank" href="http://pokebowl.maxambrogio.me/" class="visit button">Visit Site</a>
+                <a target="_blank" href="" class="visit button">Visit Site</a>
               </div>
               <div class="img poke-one"></div>
               <div class="img poke-two"></div>
@@ -92,7 +92,7 @@
                 <p>Created a fully functional web page in Wordpress. Using custom PHP code and SASS, a unique theme was developed and styled to showcase an assassination service.</p>
                 <p class="bold">Skills:  Front End Development, UX/UI Design, Accessibility, Web Animation, Wordpress, PHP, MySQL
                 </p>
-                <a target="_blank" href="http://Assassins.maxambrogio.me/" class="visit button">Visit Site</a>
+                <a target="_blank" href="" class="visit button">Visit Site</a>
               </div>
               <div class="img assassins-one"></div>
               <div class="img assassins-two"></div>
@@ -116,7 +116,7 @@
                     <p>Focused on recreating one of my favorite album covers and animating it purely in css and JS</p>
                     <p class="bold">Skills: Front End Development, Web Animation
                     </p>
-                    <a target="_blank" href="http://kid.maxambrogio.me/" class="visit button">Visit Site</a>
+                    <a target="_blank" href="" class="visit button">Visit Site</a>
                 </div>
                 <div class="img k_d-one"></div>
             </div>
