Webdev-ppage-updated

--- a/webdev.html
+++ b/webdev.html
@@ -42,10 +42,10 @@
           <section class="works">
             <div class="juventus work">
                 <div class="copy">
-                    <h2>Juventus Shop</h2>
-                    <p>Reinventing the Juventes Official Shop landing page, Match Kits and developing new shop page options.</p>
-                    <p class="bold">Skills: Front-end development, UX/UI design, Accessibility, Web-animation </p>
-                    <a target="_blank" href="" class="visit button">Visit Site</a>
+                    <h2>Slingshot Product Development Group</h2>
+                    <p>Used Spline to implement 3D CAD models as background elements in this webflow built site.</p>
+                    <p class="bold">Skills: Front-end development, UX/UI design, Accessibility, Web-animation, 3D animation, Spline </p>
+                    <a target="_blank" href="https://bbm-slg.webflow.io/" class="visit button">Visit Site</a>
                 </div>
                 <div class="img juve-one"></div>
                 <div class="img juve-two"></div>
@@ -53,10 +53,10 @@
 
             <div class="trivia work">
                 <div class="copy">
-                    <h2>React Trivia Game</h2>
-                    <p>Tapping into the open trivia database, React.js was used to create a multi-functional, 10 question quiz. This interactive quiz invited users to input their answers, which later calculated their answers and presented their total score.</p>
-                    <p class="bold">Skills: Front-end development, React.js</p>
-                    <a target="_blank" href="" class="visit button">Visit Site</a>
+                    <h2>New Creation Labels & Packaging</h2>
+                    <p>Wordpress Website developed for agency client</p>
+                    <p class="bold">Skills: Front-end development, Wordpress, Elementor, JavaScript</p>
+                    <a target="_blank" href="https://nclps.com/" class="visit button">Visit Site</a>
                 </div>
                 <div class="img trivia-one"></div>
                 <div class="img trivia-two"></div>
@@ -64,11 +64,10 @@
 
             <div id="truly" class="truly work">
                 <div class="copy">
-                    <h2>Truly Hard Seltzer</h2>
-                    <p>Developing a new landing page that makes lifestyle and beverage brand, Truly, stand out in the hard seltzer market.
-                    </p>
-                    <p class="bold">Skills:  Front End Development, UX/UI Design, Accessibility, Web Animation</p>
-                    <a target="_blank" href="" class="visit button">Visit Site</a>
+                    <h2>BDR partners</h2>
+                    <p>Wordpress site created in Wordpress and Elementor</p>
+                    <p class="bold">Skills:  Front End Development, CMS creation, wordpress, Elementor</p>
+                    <a target="_blank" href="https://bdrpartners.com/" class="visit button">Visit Site</a>
                 </div>
                 <div class="img truly-one"></div>
                 <div class="img truly-two"></div>
@@ -76,11 +75,11 @@
             
             <div id="poke" class="pokebowl work">
               <div class="copy">
-                <h2>PokeBowl Website</h2>
-                <p>Created a landing page for an imaginary pokebowl resturant</p>
-                <p class="bold">Skills:  Front End Development, UX/UI Design, Accessibility, Web Animation
+                <h2>First Franklin Finacial</h2>
+                <p>Wordpress landing page created for 1FFC. Includes creative web-animaiton combined with custom cms and post type for easy future updates </p>
+                <p class="bold">Skills:  Front End Development, UX/UI Design, Accessibility, Web Animation, PHP, HTML, CSS
                 </p>
-                <a target="_blank" href="" class="visit button">Visit Site</a>
+                <a target="_blank" href="https://invest.1ffc.com/" class="visit button">Visit Site</a>
               </div>
               <div class="img poke-one"></div>
               <div class="img poke-two"></div>
@@ -88,17 +87,17 @@
 
             <div id="assassin" class="assassins work">
               <div class="copy">
-                <h2>Assassins Website</h2>
-                <p>Created a fully functional web page in Wordpress. Using custom PHP code and SASS, a unique theme was developed and styled to showcase an assassination service.</p>
-                <p class="bold">Skills:  Front End Development, UX/UI Design, Accessibility, Web Animation, Wordpress, PHP, MySQL
+                <h2>Diversify Veterinary Medicine Coalition</h2>
+                <p>Wordpress / elementor site</p>
+                <p class="bold">Skills:  Front End Development, UX/UI Design, Accessibility, Wordpress, 
                 </p>
-                <a target="_blank" href="" class="visit button">Visit Site</a>
+                <a target="_blank" href="https://diversifyvetmed.org/" class="visit button">Visit Site</a>
               </div>
               <div class="img assassins-one"></div>
               <div class="img assassins-two"></div>
             </div>
 
-            <div id="gpro" class="g-pro work">
+            <!-- <div id="gpro" class="g-pro work">
                 <div class="copy">
                     <h2>G PRO Superlight</h2>
                     <p>Experimenting with trending web animations and design</p>
@@ -119,7 +118,7 @@
                     <a target="_blank" href="" class="visit button">Visit Site</a>
                 </div>
                 <div class="img k_d-one"></div>
-            </div>
+            </div> -->
 
 
             <!-- <div id="Olea" class="olea-shop work">
